# media-platform

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: prod.yml
migrations/: 0001_users_table.sql  20250428174531_users_table.up.sql
src/: config.rs  lib.rs  main.rs
src/domain/: hasher_abstract.rs  mod.rs
src/domain/entities/: user.rs
src/domain/repositories/: errors.rs  mod.rs  user_repository_abstract.rs
src/domain/services/: account_service.rs  auth_service.rs  errors.rs  mod.rs  user_service.rs
src/infrastructure/: app_setup.rs  hasher.rs  mod.rs
src/infrastructure/db/: db_connection.rs  mod.rs
src/infrastructure/db/dto/: user_dto.rs
src/infrastructure/repositories/: user_repository.rs
src/middleware/: auth.rs
src/presentation/handlers/: account_handler.rs  auth_handler.rs  mod.rs  user_handler.rs
src/presentation/shared/: app_state.rs  errors.rs  mod.rs
src/presentation/shared/dto/: user_dto.rs
